--- a/assets/Style_panther.css
+++ b/assets/Style_panther.css
@@ -17,8 +17,9 @@
 }
 /* Design la premiere partie header de la Black Panther */
 body{
-  background-image: url(../assets/Illustrations + Logo/All pages/arriere plan/arrière_plan);
+  background-image: url(../assets/arrierPlan/arrière_plan.png);
   width: 100%;
+  
 }
   #haut{
     display: flex;
@@ -49,21 +50,13 @@ body{
   #haut .nav li{
     margin-right: 15px;
   }
-  #haut .scroll{
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    text-align: right;
-  }
-  .scroll .social{
-    margin-top: 15px;
-  }
-  .traites{
+  /*Design le partie bas black header*/
+  .traits{
     position: fixed;
     display: flex;
     margin-left: 2.5vw;
   }
-  .traites div{
+  .traits div{
     margin-right: 20px;
   }
   .trait-1{
@@ -77,6 +70,18 @@ body{
     border-left: 3px solid #999187;
     height: 40vh;
   }
+  #haut .scroll{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    text-align: right;
+    width: 25%;
+    padding: 20vh;
+  }
+  .scroll{
+    margin-top: 15px;
+  }
+  
   #bas{
     width: 100vw;
     display: flex;
@@ -171,17 +176,17 @@ body{
     justify-content: center;
     text-align: left;
   }
-  #prince .birth{
+  #birth .venger{
     display: inline-block;
     background-color:  #FFFFFF;
     margin: center;
-   font-size: 20px;
+   font-size: 10px;
    justify-content: 20%;
     margin-left: 5%;
-    padding: 30vh;
-
+    width left: 30%;
+    padding: 6vh;
   }
-  #prince .venger img{
+  #birth.venger img{
     display: flex;
     justify-content: center;
     width: 200%;
@@ -189,10 +194,8 @@ body{
     text-align: right;
     padding: 30vh;
   }
-  
   /* Design la troisieme section un heros vengeur*/
   #heros .container{
-
     justify-content: center;
   }
   #heros .titre{
@@ -218,7 +221,6 @@ body{
     text-align: 20%;
     margin-top: 20px;
   }
- 
   #heros-justice .protect{
     display: flex;
     justify-content: center;
@@ -227,24 +229,29 @@ body{
     text-align: left;
   }
   #birth .buttom{
-    background-color: #FFFFFF;
+    justify-content: center;
+    background: #FFFFFF;
+    top: 155px;
+    border: none;
     justify-content: none;
-    margin: 20px;
+    margin: 10px;
     width: 60vh;
     height: 30vw;
-    justify-content: center;
   }
   #birth .name{
     display: flex;
+    background-image: white;
     color: black;
     justify-content: center;
     text-align:  justify;
     margin-left: 100px;
   }
   #birth .btn-group{
-    padding: 10px;
-    display: flex;
     justify-content: space-around;
+    padding: 30px;
+    display: flex;
+    height: 50px;
+    width: 60%;
   }
   #birth .form input[type='radio']{
     opacity: 0;
@@ -264,64 +271,96 @@ body{
     color: #3D2DA6;
     margin-top: 20px;
   }
+  .heros-protecteur{
+    justify-content: center;
+    align-items:center;
+    
+    
+  }
 
 /* Design de la partie formulaire d'inscription */
+#Infoline .warapper{
+  position: absolute;
+  padding: 30vh;
+}
 #Infoline .form{
-  background-color: #F2CEF2;
   justify-content: center;
-  text-align: center;
-  font-size: 32px;
-  margin-bottom: 32px;
-  border-radius: 40px / 20px;
+  background:
+  linear-gradient(90deg,#FFFFFF);
+  -webkit-background-clip: text;
+  border: 1px solid #FFFFFF);
+  color: transparent;
+  padding: 300px;
+  font-size: 40px;
+  border-radius: 30px / 10px;
 }
 #Infoline p{
   display: flex;
   justify-content: center;
-  text-align: left;
-  text-justify: auto;
-  color: black;
+  height: 5vh;
+  size: 12px;;
+  text-justify: center;
+  color: white;
 }
-
 #Infoline .infos{
   display: flex;
   justify-content: center;
-  text-align: left;
-  text-justify: auto;
-  color: black;
+  height: 5vh;
+
+  size: 20px;
+  text-justify: center;
+  color: white;
 }
 #Infoline .action{
-  border: 1px solid #021748;
-  background: none;
-  margin-top: 20px;
+  justify-content: center;
+  background-color: #F2CEF2;
+  padding: 40vh;
+  margin-top: 10vh;
+  font-weight: bolder;
   border-radius: 30px;
   text-align: center;
   width: 40vw;
   height: auto;
 }
-#Infoline .action .Nom{
+#Infoline .action .nom{
   border: 1px solid #021748;
   background: none;
+  text-align: 2 left;
+  color: #021740;
   margin-top: 20px;
   border-radius: 30px;
   width: 40vw;
   height: auto;
   }
-  #Infoline .action .email{
-    border: 1px solid #021748;
-    background: none;
-    margin-top: 20px;
-    border-radius: 30px;
-    width: 40vw;
-    height: auto;
+#Infoline .action .email{
+  border: 1px solid #021748;
+  justify-content: center;
+  text-align: 2 left;
+  color: #021740;
+  margin-top: 20px;
+  border-radius: 30px;
+  width: 40vw;
+  height: auto;
     }
-    #Infoline .action .message{
-      border: 1px solid #021748;
-      background: none;
-      margin-top: 20px;
-      border-radius: 30px;
-      width: 40vw;
-      height: auto;
+#Infoline .action .message{
+  border: 1px solid #021748;
+  text-align: 2 left;
+  color: #021740;
+  margin-top: 20px;
+  border-radius: 30px;
+  width: 40vw;
+  height: auto;
       }
+#Infoline .action input{
+  justify-content: center;
+  margin-left: 25px;
+  text-decoration: #021740;
+  border: 1px solid #021748;
+  background-color: #9E91B7;
+  border-radius: 30px;
+  width: 10vw;
+  height: 5vh;
+  }
 
 /* responsive*/
 footer {
@@ -329,7 +368,7 @@ footer {
   justify-content: center;
   padding-top: 20vh;
   padding-bottom: 15vh;
-  background: url(../illustration/All_pages/back_footer.png);
+  background: url(../assets/arrierPlan/back_footer.png);
   background-size: 100% 100%;
   background-position: center;
 }
